# mongo

./: BUILDME  CMakeLists.txt  README.third_party.md  SConscript.buildinfo  SConscript.smoke  SConstruct  analyze.py  node_me_harder.js  testme.cache.sh  testme.sh
buildscripts/: errorcodes.py  evergreen_burn_in_tests.py  evergreen_gen_powercycle_tasks.py  scons.py  smoke.py  utils.py
buildscripts/resmokelib/testing/hooks/: interface.py
buildscripts/task_generation/task_types/: fuzzer_tasks.py  multiversion_tasks.py  resmoke_tasks.py
docs/: building.md
etc/: evergreen.yml  perf.yml  run-icecc.in  system_perf.yml  third_party_components.yml
etc/dtrace/: mutable_rep_histogram.d
etc/scons/: mongodbtoolchain_clang.vars  mongodbtoolchain_gcc.vars  mongodbtoolchain_v3_clang.vars  mongodbtoolchain_v3_gcc.vars  xcode_ios.vars  xcode_ios_sim.vars  xcode_macosx.vars  xcode_macosx_arm.vars  xcode_tvos.vars  xcode_tvos_sim.vars  xcode_watchos.vars  xcode_watchos_sim.vars
site_scons/: libdeps.py
site_scons/mongo/: install_actions.py
site_scons/site_tools/: auto_archive.py  auto_install_binaries.py  dtrace.py  forceincludes.py  git_decider.py  icecream.py  idl_tool.py  incremental_link.py  mongo_benchmark.py  mongo_libfuzzer.py  mongo_test_execution.py  mongo_unittest.py  ninja_next.py  separate_debug.py  thin_archive.py  unittest.py  vcredist.py
src/: CMakeLists.txt  SConscript  SConscript.client
src/mongo/: CMakeLists.txt  SConscript  config.h.in
src/mongo/base/: CMakeLists.txt  generate_error_codes.py
src/mongo/bson/: CMakeLists.txt
src/mongo/bson/mutable/: CMakeLists.txt  document.cpp  mutable.dtrace
src/mongo/bson/util/: CMakeLists.txt
src/mongo/client/: CMakeLists.txt  SConscript
src/mongo/db/: CMakeLists.txt  client.cpp  client.h  db.cpp  dbmessage.h  instance.cpp  mongod_initializers.cpp  server_options_helpers.cpp  service_entry_point_mongod.cpp
src/mongo/db/auth/: CMakeLists.txt
src/mongo/db/catalog/: CMakeLists.txt
src/mongo/db/catalog/util/: partitioned.h
src/mongo/db/cst/: SConscript  bson_lexer.cpp  bson_lexer.h  bson_lexer_test.cpp  pipeline_grammar.yy
src/mongo/db/fts/: SConscript
src/mongo/db/geo/: CMakeLists.txt
src/mongo/db/matcher/: CMakeLists.txt
src/mongo/db/ops/: CMakeLists.txt
src/mongo/db/pipeline/: SConscript  document_source.cpp  document_source.h
src/mongo/db/query/: CMakeLists.txt
src/mongo/db/s/: metadata_manager.cpp
src/mongo/db/stats/: CMakeLists.txt  counters.h
src/mongo/db/storage/: SConscript
src/mongo/db/storage/wiredtiger/: SConscript  wiredtiger_record_store.cpp  wiredtiger_session_cache.h
src/mongo/dbtests/: SConscript
src/mongo/dbtests/mock/: CMakeLists.txt
src/mongo/executor/: SConscript  async_mock_stream_factory.cpp  async_mock_stream_factory.h  async_secure_stream.cpp  async_secure_stream.h  async_stream.cpp  async_stream.h  async_stream_common.h  async_stream_interface.h  network_interface_asio.cpp  network_interface_asio.h  network_interface_asio_connect.cpp  network_interface_asio_operation.cpp
src/mongo/installer/msi/wxs/: BinaryFragment.wxs
src/mongo/logger/: CMakeLists.txt  logstream_builder.cpp  logstream_builder.h
src/mongo/platform/: CMakeLists.txt  SConscript
src/mongo/rpc/: SConscript
src/mongo/s/: SConscript  mongos_main.cpp
src/mongo/s/catalog/replset/: SConscript
src/mongo/s/client/: shard_connection.cpp
src/mongo/scripting/: SConscript  bench.cpp
src/mongo/scripting/mozjs/: implscope.cpp
src/mongo/shell/: servers_misc.js  shell_utils.cpp  utils.js
src/mongo/stdx/: SConscript  stdx.cpp
src/mongo/transport/: SConscript  service_executor_adaptive.cpp  service_executor_silly.cpp  service_executor_silly.h  service_state_machine.cpp  transport_layer_asio.cpp  transport_layer_asio.h  transport_layer_asio.hpp  transport_layer_asio_test.cpp  transport_layer_manager.cpp
src/mongo/unittest/: CMakeLists.txt
src/mongo/util/: CMakeLists.txt  SConscript  assert_util.h  dtrace.h  log.cpp  platform_init.cpp  quick_exit.cpp  signal_handlers_synchronous.cpp  tcmalloc_server_status_section.cpp
src/mongo/util/cmdline_utils/: CMakeLists.txt
src/mongo/util/concurrency/: CMakeLists.txt  SConscript
src/mongo/util/net/: CMakeLists.txt  hostandport.h  message_server.h  message_server_port.cpp  ssl_manager.cpp
src/mongo/util/options_parser/: CMakeLists.txt  options_parser.cpp
